force-app/main/default/objects/Contact/fields/cgcloud__Job_Title__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Job_Title__c</fullName>
    <description>Job Title of the contact.</description>
    <label>Job Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>