force-app/main/default/objects/Contact/fields/cgcloud__Mailing_Country__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mailing_Country__c</fullName>
    <description>Mailing Country of customer.</description>
    <label>Mailing Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>en</fullName>
            </value>
            <value>
                <fullName>de</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>