force-app/main/default/objects/Contact/fields/cgcloud__Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Mailing_Street__c</fullName>
    <description>Mailing Street of customer.</description>
    <label>Mailing Street</label>
    <length>50</length>
    <type>Text</type>
</CustomField>