force-app/main/default/objects/Contact/fields/cgcloud__Main_Function__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Main_Function__c</fullName>
    <description>Main Function.</description>
    <label>Main Function</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>Secretary</fullName>
            </value>
            <value>
                <fullName>CategoryManager</fullName>
            </value>
            <value>
                <fullName>KAM</fullName>
            </value>
            <value>
                <fullName>BuyingAgent</fullName>
            </value>
            <value>
                <fullName>StoreManager</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Tenant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>