force-app/main/default/objects/Contact/fields/cgcloud__Postbox__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Postbox__c</fullName>
    <description>Postbox.</description>
    <label>PostBox</label>
    <length>255</length>
    <type>Text</type>
</CustomField>