force-app/main/default/objects/Contact/listViews/cgcloud__CGCloud_Contacts.listView-meta.xml
<ListView>
    <fullName>cgcloud__CGCloud_Contacts</fullName>
    <columns>CONTACT.SALUTATION</columns>
    <columns>CONTACT.LAST_NAME</columns>
    <columns>CONTACT.FIRST_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.PHONE3</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CONTACT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Contact.cgcloud__Contact</value>
    </filters>
    <label>CGCloud Contacts</label>
    <language>en_US</language>
</ListView>