force-app/main/default/objects/Contact/listViews/cgcloud__MyContacts.listView-meta.xml
<ListView>
    <fullName>cgcloud__MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>cgcloud__Job_Title__c</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>